# TicTacToe

./: .gitignore  Cargo.toml  LICENSE  flake.nix
src/game/: ai.rs  game.rs  game_state.rs  mod.rs
www/: craco.config.js  package-lock.json  package.json  vite.config.js
www/src/: index.css  index.html  index.js  index.jsx
www/src/App/: App.js  App.jsx  App.module.css
www/src/Board/: Board.css  Board.js  Board.jsx
www/src/BoardRow/: BoardRow.js  BoardRow.jsx  BoardRow.module.css
www/src/Cell/: Cell.css  Cell.js  Cell.jsx
www/src/app/: globals.css  layout.tsx  page.tsx
www/src/app/components/: Board.tsx  BoardRow.tsx  Cell.tsx
