[package]
name = "tic_tac_toe"
description = "Tic Tac Toe game with minimax AI"
repository = "https://github.com/GJHap/TicTacToe"
version = "1.0.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.78"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
