[package]
name = "tic_tac_toe"
description = "Tic Tac Toe game with minimax AI"
repository = "https://github.com/GJHap/TicTacToe"
version = "1.0.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
